# pygo

./: .gitignore  CMakeLists.txt
cmake/: CompilerFlags.cmake
src/: main.cpp
